# urlaubs-checker

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
tests/: test_urlaubs_checker.py
urlaubs_checker/: app.py
